Fix whitespace

--- a/style.css
+++ b/style.css
@@ -73,10 +73,6 @@ Scott Killen is distributed under the terms of the GNU GPL v2 or later.
   color: var(--bs-emphasis-color);
 }
 
-.blog-post {
-  margin-bottom: 4rem;
-}
-
 .blog-post-meta {
     margin-bottom: 1.25rem;
 }
